--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
@@ -11,3 +7,21 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
+
+
+
+<ion-content class="card-login">
+<ion-card >
+  <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+  <ion-card-header>
+    <ion-input label="Ingresar Usuario" placeholder=""></ion-input>
+    <ion-input label="Ingresar Contraseña" type="password" value="password"></ion-input>
+  </ion-card-header>
+  <ion-button expand="block">Iniciar Sesión</ion-button>
+<ion-button expand="block">Recuperar Contraseña</ion-button>
+</ion-card>
+</ion-content>
+
+
+  <h1 class="Footer-Version">Versión 0.0.1 (Beta)</h1>
